# Autonomous-Data-Analytics-Platform

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  sample_data.csv
agents/: eda.py  ingestion.py  insights.py  stats.py  supervisor.py  visualization.py
graph/: workflow.py
tools/: data_tools.py  plot_tools.py
